# celestium

./: .gitignore  CMakeLists.txt  README.md  shell.nix
.github/: AGENTS.md  copilot-instructions.md
.github/workflows/: codeql.yml
assets/audio/: fire_alarm.opus
assets/definitions/: constants.yml  env_effects.yml  pawns.yml  resources.yml  tiles.yml
src/: action.cpp  action.hpp  asset_manager.hpp  astar.cpp  astar.h  astar.hpp  audio_manager.cpp  audio_manager.hpp  camera.cpp  camera.h  camera.hpp  component.cpp  component.h  component.hpp  const.h  const.hpp  crew.cpp  crew.h  crew.hpp  def_manager.cpp  def_manager.hpp  direction.hpp  env_effect.cpp  env_effect.hpp  env_effect_def.hpp  env_hazard.cpp  env_hazard.hpp  fixed_update.cpp  fixed_update.hpp  fs_utils.hpp  game_server.cpp  game_server.hpp  game_state.cpp  game_state.hpp  logging.cpp  logging.h  logging.hpp  lua_bindings.cpp  lua_bindings.hpp  main.cpp  (+42 more)
